--- a/TicTacToe V1/index.html
+++ b/TicTacToe V1/index.html
@@ -30,7 +30,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="data.js"></script>
     <link rel="stylesheet" href="indexStyle.css">
-    <title>Tic Tac Toe</title>
+    <title>Tic Tac Toe V1</title>
 </head>
 <body>
     <h1 style="text-align:center">Tic Tac Toe</h1>
