--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
+
+<!--
+    /*
+ Copyright © Jerbee Paragas 1/31/2020 
+
+ ATTENTION: -------------------------------------------------------------------------------------
+    if you opened this source code your IP will be
+    tracked by GITHUB. Don't worry as long as you are not copying
+    the code, screenshot, you will be fine.
+ 
+ Message: 
+    This is my own algorithm and you should not copy 
+    it without my concent. 
+    NOTE: You should not copy comeone else's code!
+ 
+<important>--------------------------------------------------------------------------------------
+ LICENSE: Apache License 2.0
+
+ A permissive license whose main conditions require preservation of copyright and license notices. 
+ Contributors provide an express grant of patent rights. Licensed works, modifications, and larger
+ works may be distributed under different terms and without source code.
+<!important!>-------------------------------------------------------------------------------------
+ */
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -50,12 +74,17 @@
                 <img src="img.svg">
                 <div class="socials">
                     <div id="card1">
-                        <p style="font-family:monospace;">Follow Me </p>
+                        <p style="text-transform:uppercase;font-family:'Gaegu';">Follow Me Here</p>
                         <div id="links">
-                            <a href="https://www.facebook.com/jerbee.paragas"><img src="facebook-old.svg"></a>
-                            <a href="https://twitter.com/JerbeeParagas"><img src="twitter.svg"></a>
-                            <a href="https://www.instagram.com/jerbcxz/?hl=en"><img src="instagram.svg"></a>
-                            <a href="https://www.youtube.com/channel/UC3QTPgaiEML1XwoD48wtRZA"><img src="youtube.svg"></a>
+                            <a href="https://www.facebook.com/jerbee.paragas" target="_blank"><img src="facebook-old.svg"></a>
+                            <a href="https://twitter.com/JerbeeParagas" target="_blank"><img src="twitter.svg"></a>
+                            <a href="https://www.instagram.com/jerbcxz/?hl=en" target="_blank"><img src="instagram.svg"></a>
+                            <a href="https://www.youtube.com/channel/UC3QTPgaiEML1XwoD48wtRZA" target="_blank"><img src="youtube.svg"></a>
+                            <a href = "https://github.com/Jervx" target="_blank"><img src="github.svg" alt="GitHub"></a>
+                        </div>
+                        <div id="links">
+                            <p style="text-transform:uppercase;margin-top:50px;font-family:'Gaegu';padding-bottom:5px">previous Tic Tac Toe Versions</p>
+                            <a style="margin-top:5px;font-family:'Gaegu';font-size:15px;text-decoration:underline;color:white" href="https://jervx.github.io/JervxApplicationDeploy/TicTacToe%20V1/index.html">Tic Tac Toe v1</a>
                         </div>
                         <br>
                     </div>
@@ -67,27 +96,3 @@
     </footer>
 </body>
 </html>
-
-<!--
-    /*
- Copyright © Jerbee Paragas 1/31/2020 
-
- ATTENTION: -------------------------------------------------------------------------------------
-    if you opened this source code your IP will be
-    tracked by GITHUB. Don't worry as long as you are not copying
-    the code, screenshot, you will be fine.
- 
- Message: 
-    This is my own algorithm and you should not copy 
-    it without my concent. 
-    NOTE: You should not copy comeone else's code!
- 
-<important>--------------------------------------------------------------------------------------
- LICENSE: Apache License 2.0
-
- A permissive license whose main conditions require preservation of copyright and license notices. 
- Contributors provide an express grant of patent rights. Licensed works, modifications, and larger
- works may be distributed under different terms and without source code.
-<!important!>-------------------------------------------------------------------------------------
- */
--->
