--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script src ="options.js"></script>
     <script src ="dumbAI.js"></script>
     <link rel="stylesheet" href="indexStyle.css">
-    <title>Document</title>
+    <title>Tic Tac Toe</title>
 </head>
 <body>
     <h1 style="text-align:center"> Tic Tac Toe </h1>
