--- a/index.html
+++ b/index.html
@@ -1,38 +1,15 @@
-
-<!--
-    /*
- Copyright © Jerbee Paragas 1/31/2020 
-
- ATTENTION: -------------------------------------------------------------------------------------
-    if you opened this source code your IP will be
-    tracked by GITHUB. Don't worry as long as you are not copying
-    the code, screenshot, you will be fine.
- 
- Message: 
-    This is my own algorithm and you should not copy 
-    it without my concent. 
-    NOTE: You should not copy comeone else's code!
- 
-<important>--------------------------------------------------------------------------------------
- LICENSE: Apache License 2.0
-
- A permissive license whose main conditions require preservation of copyright and license notices. 
- Contributors provide an express grant of patent rights. Licensed works, modifications, and larger
- works may be distributed under different terms and without source code.
-<!important!>-------------------------------------------------------------------------------------
- */
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src ="data.js"></script>
     <script src ="options.js"></script>
     <script src ="dumbAI.js"></script>
     <link rel="stylesheet" href="indexStyle.css">
-    <title>Tic Tac Toe</title>
+    <title>Document</title>
 </head>
 <body>
     <h1 style="text-align:center"> Tic Tac Toe </h1>
@@ -71,7 +48,7 @@
     <footer>
         <center>
             <div id="footerDiv">
-                <img src="img.svg">
+                <img id="me" src="img.svg">
                 <div class="socials">
                     <div id="card1">
                         <p style="text-transform:uppercase;font-family:'Gaegu';">Follow Me Here</p>
@@ -83,7 +60,7 @@
                             <a href = "https://github.com/Jervx" target="_blank"><img src="github.svg" alt="GitHub"></a>
                         </div>
                         <div id="links">
-                            <p style="text-transform:uppercase;margin-top:50px;font-family:'Gaegu';padding-bottom:5px">previous Tic Tac Toe Versions</p>
+                            <p id="lck">previous Tic Tac Toe Versions</p>
                             <a style="margin-top:5px;font-family:'Gaegu';font-size:15px;text-decoration:underline;color:white" href="https://jervx.github.io/JervxApplicationDeploy/TicTacToe%20V1/index.html">Tic Tac Toe v1</a>
                         </div>
                         <br>
